--- a/templates/home.html
+++ b/templates/home.html
@@ -59,7 +59,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </span></button>
-            <a class="brand" href="#">Home Page</a>
+            <a class="brand" href="/">Home Page</a>
             <div class="nav-collapse collapse">
                 <ul class="nav">
                     <li class="active">
@@ -89,17 +89,41 @@
     </div>
 </div>
 <div id="content" style="margin-top: 45px;">
-<p>lsd {{ request.user }}</p>
-{%  if user.is_authenticated %}
-    <p> kOcasas {{ user }}</p>
-{%  endif %}
     {%  block content %}{%  endblock %}
 </div>
 {%  cache 604800 styles_and_scripts_homejs %}
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="{%  static  "js/bootstrap.min.js" %}" type="text/javascript"></script>
+<script src="{% static  "js/bootstrap.min.js" %}" type="text/javascript"></script>
 <script src="{% static "js/jquery-ui-1.10.0.custom.min.js" %}" type="text/javascript"></script>
-<script src="{%  static  "js/prettify.js" %}" type="text/javascript"></script>
+<script src="{% static  "js/prettify.js" %}" type="text/javascript"></script>
+<!-- noty -->
+<script type="text/javascript" src="{% static "js/jquery.noty.js" %}"></script>
+<!-- layouts -->
+<script type="text/javascript" src="{% static "js/inline.js" %}"></script>
+<script type="text/javascript" src="{% static "js/top.js" %}"></script>
+<script type="text/javascript" src="{% static "js/topCenter.js" %}"></script>
+<script type="text/javascript" src="{% static "js/topLeft.js" %}"></script>
+<script type="text/javascript" src="{% static "js/topRight.js" %}"></script>
+<!-- themes -->
+<script type="text/javascript" src="{% static "js/default.js" %}"></script>
 {%  endcache %}
+<script>
+    function noty_message(text, type, layout){
+        var n = noty({
+            text: text,
+            type: type,
+            dismissQueue: true,
+            layout: layout,
+            theme: 'defaultTheme'
+        });
+    }
+    $(document).ready(function(){
+        {% if messages %}
+            {% for message in messages %}
+                noty_message('{{ message }}', '{{ message.tags }}', 'top');
+            {% endfor %}
+        {% endif %}
+    })
+</script>
 </body>
 </html>
