--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -87,6 +87,18 @@ table.cool-table{
     color:#666;
     text-shadow:1px 1px 1px #fff;
 }
+.cool-table tr.ui-state-error td{
+    padding:10px;
+    text-align:center;
+    background-color: #aad2f3;
+    border: 2px solid #E7EFE0;
+    -moz-border-radius:2px;
+    -webkit-border-radius:2px;
+    border-radius:2px;
+    color:#666;
+    text-shadow:1px 1px 1px #fff;
+}
+
 .cool-table tbody span.check::before{
     content : url(../images/check0.png)
 }
