--- a/templates/home.html
+++ b/templates/home.html
@@ -107,7 +107,7 @@
     </div>
 </div>
 
-<div id="content" style="margin-top: 45px;">
+<div id="content" style="margin-top: 55px;">
     {%  block content %}
         {% if request.user.is_superuser %}
             <div id="users" style="margin: 0 auto;">
@@ -144,6 +144,7 @@
                 <table class="cool-table" style="margin: 0 auto;">
                     <thead>
                         <th>UserName</th>
+                        <th>User Card #</th>
                         <th>Valid to</th>
                         <th>Moze otworzyc drzwi do serwerowni?</th>
                     </thead>
@@ -152,15 +153,16 @@
                             {% if user.user == request.user %}
                                 <tr {% if user.userCard.can_login == False %}class="ui-state-error"{% endif %}>
                                     <td>{{ user }}</td>
+                                    <td>{{ user.userCard }}</td>
                                     <td>{{ user.userCard.validTo }}</td>
-                                    <td></td>
+                                    <td><a id='check_{{ user.user.id }}' onclick="checkIfCanOpen({{ user.user.id }})" class="btn btn-primary">Sprawdz</a></td>
                                 </tr>
                             {% endif %}
                         {% endfor %}
                     </tbody>
                     <tfoot>
                         <tr>
-                            <td colspan="2">
+                            <td colspan="4">
                                 <a class="button" href="/updateValidTo/">Przedluz swoje konto o kolejny miesiac</a>
                             </td>
                         </tr>
@@ -171,7 +173,7 @@
     {%  endblock %}
 </div>
 {%  cache 604800 styles_and_scripts_homejs %}
-    <!-- Placed at the end of the document so the pages load faster -->
+<!-- Placed at the end of the document so the pages load faster -->
 <script src="{% static  "js/bootstrap.min.js" %}" type="text/javascript"></script>
 <script src="{% static "js/jquery-ui-1.10.0.custom.min.js" %}" type="text/javascript"></script>
 <script src="{% static  "js/prettify.js" %}" type="text/javascript"></script>
